@@ -38,7 +38,7 @@ public:
 	DFTYPE filetype = (DFTYPE)0;			// which mode to operate in (capture,fileappend,device)
 	FILE* file = NULL;
 	std::string name;			// name of the thing to open
-	std::string action1, action2, action3; // open with a program or batch script
+	std::string action1, action2, action3, action4; // open with a program or batch script
 	bool addFF;					// add a formfeed character before closing the file/device
 	bool addLF;					// if set, add line feed after carriage return if not used by app
 
